Fixed alignment on about page (About middle class)

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ html {
     top: 70%;
     left: 39%;
     text-align: center;
-    margin-top: 12%;
+    margin-top: 5%;
     margin-left: 15%;
     margin-right: 15%;
 }
